disney clone desktop done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="navigation">
             <div class="nav-action">
                 <div class="nav-toggle">
-                    <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-bars" ></i>
                 </div>
             </div>
             <a href="#" class="logo">
@@ -329,13 +329,12 @@
         <div class="container">
             <div class="row">
                 <div class="footer_col">
-                    <h4 class="mrg20">Suivez Disney sur:</h4>
-                    <div class="social_links">
+                    <span class="mrg20">Suivez Disney sur :</span>
                         <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
                         <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-whatsapp"></i></a>
-                    </div>    
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-youtube"></i></a>
+                       
                 </div>
                 <div class="footer_col">
                     <img src="img/logo1.png" alt="logo" width="90">
